--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Rock, Paper, Scissors</title>
+    <title>Doniyorbek |Tosh, Qaychi,Qog'oz</title>
 
   </head>
 
